--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         body {
             font-family: 'Montserrat', sans-serif;
             overflow: hidden;
+            overflow-x: hidden; /* Fix for mobile zoom issue */
             background-color: #11141a;
             color: #d1d5db;
             cursor: default;
@@ -115,7 +116,7 @@
                 <h2 class="font-lora text-xl sm:text-3xl text-slate-200 border-b-2 border-slate-700 pb-2 mb-8">ACTIVE INVESTIGATIONS</h2>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                     <!-- Case Card 1: Blackwood Manor --><div class="case-card rounded-lg overflow-hidden shadow-lg flex flex-col">
-                        <img src="https://i.ibb.co/yFQ3bFw/Screenshot-2024-05-18-at-10-38-08-PM.png" alt="A haunted mansion in the hills" class="w-full h-48 object-cover">
+                        <img src="https://raw.githubusercontent.com/sandheepgopinath/The-Silent-Watch/main/Gemini_Generated_Image_9cvz2a9cvz2a9cvz.png" alt="A haunted mansion in the hills" class="w-full h-48 object-cover">
                         <div class="p-6 flex flex-col flex-grow">
                             <h2 class="font-lora text-2xl text-slate-100 mb-1">Blackwood Manor</h2>
                             <h3 class="font-cinzel text-lg text-amber-400 mb-2">CASE #BWM-1888</h3>
@@ -126,7 +127,7 @@
                     </div>
 
                     <!-- Case Card 2: Coming Soon --><div class="case-card rounded-lg overflow-hidden shadow-lg opacity-60 flex flex-col">
-                        <img src="https://placehold.co/600x400/1a202c/4a5568?text=ANALYSIS+PENDING" alt="Coming Soon" class="w-full h-48 object-cover">
+                        <img src="https://i.ibb.co/B2C1S2X/Gemini-Generated-Image-9cvz2a9cvz2a9cvz.png" alt="Coming Soon" class="w-full h-48 object-cover">
                         <div class="p-6 flex flex-col flex-grow">
                             <h2 class="font-lora text-2xl text-slate-400 mb-1">Coming Soon</h2>
                             <h3 class="font-cinzel text-lg text-slate-500 mb-2">CLASSIFIED</h3>
@@ -235,4 +236,5 @@
     </script>
 </body>
 </html>
+
 
